# a2d2_to_ros

./: CMakeLists.txt  FAQ.md  LICENSE  README.md  WALKTHROUGH.md  package.xml
docs/: BUS_SIGNAL_CONVERTER.md  CAMERA_CONVERTER.md  CONFIG_CONVERTER.md  FAQ.md  LIDAR_CONVERTER.md  WALKTHROUGH.md
include/a2d2_to_ros/: checks.hpp  conversions.hpp  data_pair.hpp  file_utils.hpp  json_utils.hpp  lib_a2d2_to_ros.hpp  logging.hpp  msg_utils.hpp  name_utils.hpp  npz.hpp  point_cloud_iterators.hpp  sensor_config_utils.hpp  sensors.hpp  transform_utils.hpp
launch/: visualize.launch  viz_lidar_frontcenter.launch
rviz_configs/: lidar_frontcenter.rviz  visualize.rviz
schemas/: sensor_config.schema  sensor_fusion_bus_signal.schema  sensor_fusion_camera_frame.schema
scripts/: convert.sh
src/: a2d2-to-ros.cpp  sensor_fusion_bus_signals_to_ros.cpp  sensor_fusion_camera_to_ros.cpp  sensor_fusion_config.cpp  sensor_fusion_lidar_to_ros.cpp
src/a2d2_to_ros/: checks.cpp  conversions.cpp  data_pair.cpp  file_utils.cpp  json_utils.cpp  lib_a2d2_to_ros.cpp  log_build_options.hpp  msg_utils.cpp  name_utils.cpp  npz.cpp  point_cloud_iterators.cpp  sensor_config_utils.cpp  sensors.cpp  transform_utils.cpp
test/: test_a2d2_to_ros.cpp  test_checks.cpp  test_conversions.cpp  test_file_utils.cpp  test_lib_a2d2_to_ros.cpp  test_main.cpp  test_msg_utils.cpp  test_name_utils.cpp  test_transform_utils.cpp
